--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,40 +36,19 @@ body {
   font-family: "DM Sans", sans-serif;
   --text-dark: #1a2f45;
   --text-light: #445e78;
-  --chat-box-dark: #1b243b;
-  --chat-box-light: #fff;
-  --button-text: #fff;
   --toggle-ball: #fff;
-  --list-item-active: #e5effb;
-  --number-bg: #6895a3;
-  --message-box-1: #fff;
   --message-box-2: #1a233b;
   --chat-input: #060415;
   --border-light: #8187a2;
-  --info-box-color-1: #004dfc;
-  --info-box-color-2: #00ba9d;
-  --info-box-color-3: #715fc2;
-  --info-box-color-4: #ff562d;
-  --info-icon-bg-1: #b1c7fc;
-  --info-icon-bg-2: #c6f0ea;
-  --info-icon-bg-3: #d9d3ff;
-  --info-icon-bg-4: #ffe1d4;
   --app-bg: #060415;
   --box-color: #12172d;
   --box-border: #477eff;
   --button-bg: #477eff;
   --text-dark: rgba(255, 255, 255, 1);
   --text-light: rgba(255, 255, 255, 0.6);
-  --info-box-1: rgba(160, 186, 242, 0.5);
-  --info-box-2: rgba(168, 240, 229, 0.55);
-  --info-box-3: rgba(194, 168, 240, 0.34);
-  --info-box-4: rgba(240, 185, 168, 0.34);
   --toggle-bg: #477eff;
   --toggle-bg-off: #6895a3;
   --message-box-2: #477eff;
-  --message-box-1: #576c99;
-  --logo-path-1: #477eff;
-  --logo-path-2: #576c99;
   --box-shadow: rgba(18, 23, 45, 0.6) 0px 8px 24px;
   --scrollbar-thumb: linear-gradient(
     to bottom,
@@ -111,18 +90,6 @@ body {
     font-size: 20px;
     color: var(--text-dark);
     margin-left: 12px;
-  }
-}
-
-.app-logo svg {
-  width: 40px;
-  height: 40px;
-
-  .path-1 {
-    fill: var(--logo-path-1);
-  }
-  .path-2 {
-    fill: var(--logo-path-2);
   }
 }
 
@@ -322,16 +289,6 @@ body {
   }
 }
 
-.list-header-arrow {
-  margin-left: auto;
-  transform: rotate(180deg);
-  transition: 0.2s ease;
-
-  .chat-list-header.active & {
-    transform: rotate(0deg);
-  }
-}
-
 .app-main {
   flex: 3;
   height: 100%;
@@ -341,6 +298,7 @@ body {
   display: flex;
   flex-direction: column;
   transition: 0.2s;
+  overflow: auto;
 
   &-header {
     position: sticky;
@@ -351,7 +309,8 @@ body {
 }
 
 .chat-wrapper {
-  overflow: auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .chat-input {
@@ -359,7 +318,7 @@ body {
   outline: none;
   height: 32px;
   flex: 1;
-  margin-right: 4px;
+  margin: auto;
   background-color: var(--chat-input);
   color: var(--text-dark);
 
@@ -392,17 +351,6 @@ body {
   background-color: var(--chat-input);
 }
 
-.emoji-btn {
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 4px;
-  color: #ffca3e;
-}
-
 .chat-send-btn {
   height: 32px;
   color: #fff;
@@ -418,7 +366,7 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs/%3E%3Cpath fill='%23fff' d='M481.508 210.336L68.414 38.926c-17.403-7.222-37.064-4.045-51.309 8.287C2.86 59.547-3.098 78.551 1.558 96.808L38.327 241h180.026c8.284 0 15.001 6.716 15.001 15.001 0 8.284-6.716 15.001-15.001 15.001H38.327L1.558 415.193c-4.656 18.258 1.301 37.262 15.547 49.595 14.274 12.357 33.937 15.495 51.31 8.287l413.094-171.409C500.317 293.862 512 276.364 512 256.001s-11.683-37.862-30.492-45.665z'/%3E%3C/svg%3E");
 }
 
-.chat-attachment-btn {
+.chat-mic-btn {
   border: none;
   padding: 0;
   background-color: transparent;
@@ -426,12 +374,18 @@ body {
   display: flex;
   align-items: center;
   opacity: 0.7;
+  &:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
 }
 
 .message-wrapper {
   display: flex;
   align-items: flex-start;
   padding-bottom: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
 
   &.reverse {
     justify-content: flex-end;
@@ -481,215 +435,6 @@ body {
   }
 }
 
-.app-right {
-  flex-basis: 320px;
-  flex-shrink: 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-left: 24px;
-  transition: 0.2s;
-
-  .app-profile-box img {
-    margin-bottom: 16px;
-  }
-
-  .app-profile-box-title {
-    width: 100%;
-    color: var(--text-dark);
-    display: flex;
-    align-items: center;
-  }
-}
-
-.archive-btn {
-  color: #fff;
-  height: 32px;
-  margin-top: 16px;
-  border-radius: 4px;
-  background-color: var(--button-bg);
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  border: none;
-}
-
-.app-activity-box {
-  border-radius: 10px;
-  padding: 16px 16px 8px 16px;
-  border: 1px solid var(--box-border);
-  background-color: var(--box-color);
-}
-
-.activity-info-boxes {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.activity-info-box {
-  width: 48%;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 8px;
-  display: flex;
-
-  &.time {
-    background-color: var(--info-box-1);
-    color: var(--info-box-color-1);
-    .info-icon-wrapper {
-      background-color: var(--info-icon-bg-1);
-    }
-  }
-
-  &.atendee {
-    background-color: var(--info-box-2);
-    color: var(--info-box-color-2);
-    .info-icon-wrapper {
-      background-color: var(--info-icon-bg-2);
-    }
-  }
-
-  &.meeting {
-    background-color: var(--info-box-3);
-    color: var(--info-box-color-3);
-    .info-icon-wrapper {
-      background-color: var(--info-icon-bg-3);
-    }
-  }
-
-  &.reject {
-    background-color: var(--info-box-4);
-    color: var(--info-box-color-4);
-    .info-icon-wrapper {
-      background-color: var(--info-icon-bg-4);
-    }
-  }
-}
-
-.info-icon-wrapper {
-  border-radius: 50%;
-  margin-right: 4px;
-  width: 28px;
-  height: 28px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  svg {
-    width: 16px;
-    height: 16px;
-  }
-}
-
-.info-text-wrapper span {
-  display: block;
-}
-
-.info-text-upper {
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.info-text-bottom {
-  font-size: 10px;
-  color: var(--text-light);
-}
-
-.activity-info-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 4px;
-  margin-top: 16px;
-}
-
-.info-header-bold {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
-  color: var(--text-dark);
-}
-
-.info-header-light {
-  color: var(--text-light);
-  font-size: 12px;
-  line-height: 24px;
-}
-
-.activity-days-wrapper {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-}
-
-.day {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-
-  .chart {
-    border-radius: 6px;
-    height: 50%;
-    width: 6px;
-    background-color: var(--button-bg);
-    opacity: 0.5;
-    position: relative;
-
-    &:before {
-      content: "";
-      position: absolute;
-      background-color: var(--button-bg);
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-      top: calc(100% + 4px);
-    }
-  }
-
-  span {
-    margin-top: 20px;
-    display: block;
-    font-size: 10px;
-    color: var(--text-light);
-  }
-}
-
-.app-right-bottom {
-  position: fixed;
-  bottom: 0;
-  right: 24px;
-  z-index: 1;
-  background-color: var(--app-bg);
-  display: flex;
-  justify-content: flex-end;
-  margin-top: auto;
-  padding-bottom: 10px;
-}
-
-.open-left,
-.open-right {
-  position: absolute;
-  padding: 0;
-  display: none;
-  width: 20px;
-  height: 20px;
-  background-color: var(--box-color);
-  box-shadow: var(--box-shadow);
-  border: 1px solid var(--box-border);
-  border-radius: 4px;
-  top: 24px;
-}
-
-.open-left {
-  left: 0;
-}
-
-.open-right {
-  right: 0;
-}
-
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -719,10 +464,6 @@ body {
       transform: translateX(0);
       opacity: 1;
     }
-  }
-
-  .open-left {
-    display: block;
   }
 }
 
@@ -770,9 +511,11 @@ body {
 }
 
 .markdown-body {
-  margin: 0;
+  box-sizing: border-box;
+  min-width: 200px;
+  max-width: 600px;
+  margin: 0 auto;
   padding: 1em;
-  overflow: auto;
 }
 
 .router-link-active {
