--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/github-markdown-css@4.0.0/github-markdown.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/github.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
 
 .prose pre:not(.shiki) {
   padding: 0;
