--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 html.dark {
@@ -59,7 +60,7 @@ body {
 
 .app-container {
   display: flex;
-  height: 86vh;
+  height: 100vh;
   width: 100%;
   padding: 24px;
   max-width: 1800px;
@@ -312,14 +313,17 @@ body {
 }
 
 .chat-input {
+  @apply w-full min-w-86 max-w-128;
   border: none;
   outline: none;
   height: 32px;
+  padding: 2px 12px;
   flex: 1;
   margin: auto;
   background-color: var(--chat-input);
   color: var(--text-dark);
-
+  scrollbar-width: thin;
+  box-shadow: var(--box-shadow);
   &:placeholder {
     color: var(--text-light);
     font-size: 12px;
@@ -332,8 +336,9 @@ body {
     box-shadow: var(--box-shadow);
     margin-top: auto;
     border-radius: 6px;
-    padding: 12px;
+    padding: 4px;
     background-color: var(--chat-input);
+   
   }
 }
 
@@ -343,25 +348,10 @@ body {
   font-size: 12px;
   display: flex;
   flex: 1;
-  padding: 0 6px 0 12px;
+  padding: 0 6px 0 6px;
   justify-content: space-between;
   margin: 0 8px;
   background-color: var(--chat-input);
-}
-
-.chat-send-btn {
-  height: 32px;
-  color: #fff;
-  background-color: var(--button-bg);
-  border: none;
-  border-radius: 4px;
-  padding: 0 32px 0 10px;
-  font-size: 12px;
-  background-position: center right 8px;
-  background-repeat: no-repeat;
-  background-size: 14px;
-  line-height: 16px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs/%3E%3Cpath fill='%23fff' d='M481.508 210.336L68.414 38.926c-17.403-7.222-37.064-4.045-51.309 8.287C2.86 59.547-3.098 78.551 1.558 96.808L38.327 241h180.026c8.284 0 15.001 6.716 15.001 15.001 0 8.284-6.716 15.001-15.001 15.001H38.327L1.558 415.193c-4.656 18.258 1.301 37.262 15.547 49.595 14.274 12.357 33.937 15.495 51.31 8.287l413.094-171.409C500.317 293.862 512 276.364 512 256.001s-11.683-37.862-30.492-45.665z'/%3E%3C/svg%3E");
 }
 
 .chat-mic-btn {
@@ -381,9 +371,9 @@ body {
 .message-wrapper {
   display: flex;
   align-items: flex-start;
-  padding-bottom: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
 
   &.reverse {
     justify-content: flex-end;
@@ -481,19 +471,7 @@ body {
     }
   }
 
-  .open-right {
-    display: block;
-  }
 
-  .app-theme-selector {
-    position: fixed;
-    bottom: 0;
-  }
-
-  .app-main {
-    height: 100%;
-  
-  }
 }
 
 .nav-bar {
