--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@ body,
   margin: 0;
   padding: 0;
   color: #fff;
+  
 }
 
 html.dark {
@@ -60,7 +61,7 @@ body {
 
 .app-container {
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   padding: 24px;
   max-width: 1800px;
@@ -297,7 +298,6 @@ body {
   display: flex;
   flex-direction: column;
   transition: 0.2s;
-  overflow: auto;
 
   &-header {
     position: sticky;
@@ -424,6 +424,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 8px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-track {
@@ -474,17 +475,6 @@ body {
 
 }
 
-.nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0 24px;
-  height: 64px;
-  background-color: var(--box-color);
-  border: 1px solid var(--box-border);
-  border-radius: 10px;
-  margin-bottom: 24px;
-}
 
 .markdown-body {
   box-sizing: border-box;
