--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -30,3 +30,10 @@ html.dark .shiki-light {
 html:not(.dark) .shiki-dark {
   display: none;
 }
+
+.markdown-body {
+ 
+img {
+  max-width: 8rem!important;
+}
+}
